# SignatureDeploymentConfiguration

./: .gitignore  DEPLOYMENT_PLAN.md  PAYMENT_IMPLEMENTATION_PLAN.md  PAYMENT_INTEGRATION_GUIDE.md  README.md  SIDEBAR_PLUGIN_GUIDE.md  WECHAT_ALIPAY_PAYMENT_PROPOSAL.md  package.json  部署文件清单.md  项目目标.md  项目详情.md  飞书多维表格PythonSDK.md  飞书多维表格后端API.md  飞书多维表格插件官方文档参考.md
BaseOpenSDK-Python-Playground/: .env  .env.example  .personal_base_token  check_wechat_config.py  data.db  main.py  manual_cert_debug.py  quota.db  requirements.txt
BaseOpenSDK-Python-Playground/certs/: apiclient_cert.pem  apiclient_key.pem
BaseOpenSDK-Python-Playground/routes/: api_routes.py  page_routes.py
BaseOpenSDK-Python-Playground/services/: lark_service.py  quota_service.py  sign_service.py  wechat_pay_service.py
BaseOpenSDK-Python-Playground/templates/: sign.html
BaseOpenSDK-Python-Playground/utils/: crypto_utils.py  (+1 more)
backend_code/: main.py  migrate_field_name.py  pyproject.toml  项目目标.md
backend_code/certs/: apiclient_cert.p12  wechat_provided_cert.pem
backend_code/playground/: search_and_replace.py
backend_code/routes/: api_routes.py  page_routes.py
backend_code/services/: lark_service.py  quota_service.py  wechat_pay_service.py
backend_code/templates/: sign.html
backend_code/tests/: test_sign_logic.py
backend_code/utils/: image_utils.py  rate_limiter.py
feishu_plugin_v2/: package.json
vue-template-main/: .env.development  .env.development.example  .env.production  .env.production.example  README.md  index.html  package-lock.json  vite.config.js  技术选择及要求标准.md  项目目标.md
(+23 files in other folders)
