[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
Flask = "^2.1.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
baseopensdk = {url = "https://lf3-static.bytednsdoc.com/obj/eden-cn/lmeh7phbozvhoz/base-open-sdk/baseopensdk-0.0.12-py3-none-any.whl"}
qrcode = {extras = ["pil"], version = "^8.2"}
flask-cors = "^6.0.1"
cryptography = "^46.0.3"
pillow = "^12.0.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"